# zsTrain

./: .gitignore  CMakeLists.txt  README.md
app/example/cpp11/: CMakeLists.txt  cpp11Main.cpp  cpp11Test.cpp
app/example/helloWorld/: CMakeLists.txt  HelloWorldMain.cpp  helloWorldTest.cpp  helloWorldTestFix.cpp
app/example/logAnalyzer/: logAnalyzerMain.cpp  logAnalyzerTest.cpp
app/example/logAnalyzer2/: logAnalyzer2Main.cpp  logAnalyzer2Test.cpp
app/example/simpleParser/: simpleParserMain.cpp  simpleParserTest.cpp
app/example/tddTest/: tddTestMain.cpp
cmake/: ZSTCompilerFlags.cmake
doc/cmake/: effective_modern_cmake.md  reference.md
doc/code-style/: effectivec++条款.txt  代码坏味道.txt
doc/cpp-dev/: doc.md
doc/cpp11/: c++11验证代码.cpp  cpp11-1.md  cpp11-2.md  cpp11-3.md
doc/gcov-lcov/: cov-guide.md
doc/tdd/: tddTrain.md
examples/: CMakeLists.txt
examples/pat/Basic/: hello_world.cpp
examples/pat/Basic/practice/: 1034.cpp  1035.cpp  1036.cpp  1037.cpp  1038.cpp  1039.cpp  1040.cpp  1041.cpp  1042.cpp
examples/pat/Basic/test/: 1043.cpp  1044.cpp  1045.cpp  1046.cpp  1057.cpp  1065.cpp
examples/pcl/: CMakeLists.txt
examples/pcl/4/kdtree_search/: CMakeLists.txt  kdtree_search.cpp
examples/pcl/6/voxel_grid/: CMakeLists.txt  voxel_grid.cpp
examples/root/testcmake.hq/: CMakeLists.txt  main.cc
examples/root/testcmake.hq/include/add/: add-three.cc  add-two.cc  add.h
examples/root/testcmake.hq/include/mul/: CMakeLists.txt  mul-two.cc  mul-two.h
examples/root/testcmake.hq/include/sub/: sub-two.cc  sub-two.h
examples/root/testcmake.hq/src/: CMakeLists.txt  calculate.cc  calculate.h
examples/root/testcmake.hq/testso/: CMakeLists.txt  calculate.h  main.cc
examples/root/testcmake.zs/: CMakeLists.txt  readme.md
examples/root/testcmake.zs/include/add/: CMakeLists.txt  add-three.cc
examples/root/testcmake.zs/include/mul/: CMakeLists.txt  mul-two.cc  mul-two.h
examples/root/testcmake.zs/include/sub/: CMakeLists.txt  sub-two.cc  sub-two.h
examples/root/testcmake.zs/src/: calculate.cc
examples/root/testcmake.zs/testlib/: CMakeLists.txt
examples/root/testcmake.zs/testso/: CMakeLists.txt  maintestso.cc
examples/root/user/: CMakeLists.txt  maintestso.cc
examples/root/user/include/: calculate.h
examples/root/user1/: CMakeLists.txt
examples/root/user1/src/: maintestlib.cc
include/example/: logAnalyzer.h  mockLogAnalyzer.h  simpleParser.h
include/zstinternal/example/: cpp11.h  logAnalyzer2.h
leetcode/: 509.斐波那契数.cpp  88.合并两个有序数组.cpp
lib/example/: cpp11.cpp  helloWorld.cpp  logAnalyzer.cpp  logAnalyzer2.cpp  simpleParser.cpp  tddTest.cpp
pyapp/: CrcCal.py  calab.py  test_CrcCal.py  test_HelloWorld.py  test_calab.py
python/: HelloWorld.py
script/: diff-lines.sh  gcov_check.sh  gitftn.sh  gmock_gen.sh  start-up.sh
script/pcl/: pcl_remove_ros.sh
src/: CMakeLists.txt
src/deprecated/: cpp11.cpp  logAnalyzer2.cpp  simpleParser.cpp
src/tddtest/: CMakeLists.txt  tddtest.cpp
tests/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/tddtest/: CMakeLists.txt  tddtestMain.cpp  tddtestTest.cpp
